# re2-rust

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.en.md  README.md  benchlog.ubuntu  test-results.txt
ci/: 00-pre.sh  01-base.sh  02-examples.sh
patch/: rure.patch
re2/: Cargo.toml  filtered_re2.cc  filtered_re2.h  re2.cc  re2.h  regex_internal.h  set.cc  set.h  stringpiece.cc  stringpiece.h
re2/testing/: filtered_re2_test.cc  re2_arg_test.cc  re2_test.cc  regexp_benchmark.cc  set_test.cc
re2/testing/util/: benchmark.cc  benchmark.h  logging.h  strutil.cc  strutil.h  test.cc  test.h  util.h
regex-capi/: CMakeLists.txt  Cargo.toml
regex-capi/ctest/: compile  test.c
regex-capi/include/: regex_capi.h  rure.h
regex-capi/src/: error.rs  lib.rs  lib_internal.rs  rure.rs
util/: benchmark.cc  benchmark.h  flags.h  logging.h  malloc_counter.h  mix.h  mutex.h  pcre.h  strutil.h  test.h  utf.h
