[package]
name = "re2"
version = "0.1.0"
authors = ["seuzw <930zhaowei@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
path = "re2.rs"
name = "re2"

toml = "0.5.8"
serde_derive = "1.0.130"
serde = "1.0.130"
log = "0.4"
log4rs = "1.0"
thiserror = "1.0"
anyhow = "1.0"
http = "0.2.6"
procfs = "0.12.0"
nix = "0.23.0"
pathdiff = "0.2.1"
