[package]
name = "regex-capi"
version = "0.2.1"  #:version
authors = ["The RE2-Rust Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://gitee.com/openeuler/re2-rust"
documentation = "https://gitee.com/openeuler/re2-rust"
homepage = "https://gitee.com/openeuler/re2-rust"
description = """
A C API for Rust's regular expression library.
"""
workspace = ".."
edition = "2018"

[lib]
name = "capi"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
regex = "1.6.0"
